@@ -35,6 +35,7 @@ var localized_strings,
             options_total_spent: "Show \"Total Spent\" on Account Page",
             options_group_events: "Show Events on Group Overview",
             options_greenlight_banner: "Replace Steam Greenlight Banner",
+			options_hideactivelistings: "Hide all active listings on market homepage by default",
             options_steamcardexchange: "Show SteamCardExchange links on badges",
             options_es_bg: "Set Custom Background on Edit Profile Screen",
             options_showallachievements: "Show achievement stats on \"All Games\" page",
@@ -781,6 +782,7 @@ var localized_strings,
                 options: "Опции",
                 website: "Веб-сайт",
                 contribute: "Внести вклад (GitHub)",
+				official_group_url: "steamcommunity.com/groups/enhancedsteamru",
                 store: "Магазин",
                 library_menu: "Библиотека",
                 community: "Сообщество",
