@@ -619,6 +619,15 @@
 					<a href="http://enhancedsteam.com/featuredetail.php?id=14" target="_blank"><img src="img/questionmark.png" height="16px" /></a>
 				</td>
 			</tr>
+			
+			<tr>
+				<td>
+					<input type="checkbox" id="hideactivelistings">
+				</td>
+				<td height=30>
+					<div id="hideactivelistings_text" class="text">Hide all active listings on market homepage by default</div>
+				</td>
+			</tr>
 
 			<tr>
 				<td>
